--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
 							</p>
 						<div class="row">
 							<div class="col-md-12 subtext text-center" >
-								<div  class="texto" id="numInv" style="" >Esta invitación es valida por # pases</div>
+								<div  class="texto" id="numInv" style="" >Esta invitación es valida por # personas</div>
 							</div>
 						</div>
 					</div>
